--- a/analysis_code/transparency_analysis_script.Rmd
+++ b/analysis_code/transparency_analysis_script.Rmd
@@ -8,10 +8,12 @@ This document carries out the analysis and diagnostics outlined elsewhere in the
 
 ###Loading functions
 
-This chunk loads the analysis functions. It overwrites `transparency_analysis_functions.R` in the process, and it puts a small amount of miscellaneous non-function objects into your namespace. Sorry.
+This chunk loads the analysis functions. It overwrites `transparency_analysis_functions.R` in the process, and (with apologies) it puts a small amount of miscellaneous non-function objects into your namespace. 
 
-```{r, results = "hide", message = "FALSE"}
-#This needs to be changed depending on where you have your clone of the repository.
+The string `PATH_TO_THIS_FILE` needs to be changed depending on where you have your clone of the repository.
+
+```{r, results = "hide", message = FALSE, warning = FALSE}
+rm(list = ls())
 PATH_TO_THIS_FILE = "~/Desktop/winter_2016/consulting/Leah Perlmutter (cs)/transparency_analysis/analysis_code/"
 warning(paste("The path", PATH_TO_THIS_FILE, "should point to transparency_analysis_functions.Rmd and transparency_analysis_script.Rmd."))
 setwd(PATH_TO_THIS_FILE)
