Restored old statistical hypothesis
Updated code and also `analysis_plans.md`.

--- a/analysis_code/transparency_analysis_script.Rmd
+++ b/analysis_code/transparency_analysis_script.Rmd
@@ -42,7 +42,7 @@ get_effect_sizes()
 
 The next set of tables provide approximate p-values under the Analysis 1 and Analysis 2 assumptions. 
 
-For Analysis 1, all the hypothesis tests pertain to choice of oculus versus monitor (H3). There are two significant p-values, for pointing and accuracy. So, we have evidence that the choice of oculus versus monitor matters for those task metrics. The estimated effects suggest that the oculus increases the odds that pointing will matter (by 120%, a factor of 2.20) but decreases the odds of success by a lot (85%). The p-value for attempt_times is nearly significant, but the percentage changes (9.68% and 5.48%) are unimpressive. 
+For Analysis 1, all the hypothesis tests pertain to choice of oculus versus monitor (H3). There are two significant p-values, for pointing and accuracy. So, we have some evidence that the choice of oculus versus monitor matters for those task metrics. The estimated effects suggest that the oculus increases the odds that pointing will matter (by 120%, a factor of 2.20) but decreases the odds of success by a lot (85%). Both signifcant p-values pertain to effects observed while the transparency was present, rather than aftereffects. Also noteworthy, though, is the large effect size estimate (60% decrease) for `M_to_O_P2`. This was not deemed significant, but only because the uncertainty involved was even larger. The p-value for attempt_times is nearly significant, but the percentage changes (9.68% and 5.48%) may not represent a useful degree of improvement (that is a question for an expert in this field). 
 
 For Analysis 2, the hypothesis tests address oculus/monitor versus baseline. None of the results were significant for aftereffects, but for during-effects, the transparency devices seemed to affect pointing, accuracy, and number of words. The effects are all beneficial -- higher accuracy, better use of pointing, and fewer words. The effects are also large in magnitude: 25-25% fewer words and very high changes in odds of pointing and accurate task completion.
 
